feat: Implementing role middleware and Refine Auth Middleware
