# docs/swagger.json
@@ -2183,6 +2183,11 @@
                 }
             },
             "post": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
                 "description": "Creates a new user in Keycloak",
                 "consumes": [
                     "application/json"
